			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02o: *********************************

IMP: (05/26/05, SMR) Fixed multi-cut code.

IMP: (05/25/05, RK) NCC: add regression tests for native thick oxide NMOS

IMP: (05/25/05, SMR) Added multi-cut code.

IMP: (05/25/05, SMR) Schematic DRC now allows arcs to cross over icons.

BUG: (05/25/05, DN) Text options are incompatible after changes.
FIX: Method "TextDescriptor.DescriptorPref.swap" as a temporary fix.

BUG: (05/25/05, DN) Font is not properly read after last changes.
FIX: In "Library.DiskVariable.makeVariable" use "getName" instead of "toString".

IMP: (05/24/05, SMR) Improved component menu colors when nonstandard colors are used.

IMP: (05/24/05, SMR) Library names in the explorer tree are shown in bold when the
     library has changed (Bug #326).

BUG: (05/24/05, SMR) Verilog deck generation writes names that start with digits (Bug #338).
FIX: Prepend a "_" to symbols that start with a digit.

IMP: (05/25/05, DN) "regression/tools/gateLayGen/scripts/mocmosDrc.bsh" and
  "regression/tools/IO/scripts/*.bsh" are refreshed.

IMP: (05/25/05, DN) TextDescriptor now keeps "isDisplay" and "Code" fields also.
  "Variable.flags" field removed.ImmutableTextDescriptor is used in database.
  Additional versions of "ElectricObject.newVar" added:
  "newVar(key,value,td)" creates variable with specified descriptor.
  "newVar(key,value,boolean)" creates either displayable or non-displayable variable.
  "newDisplayVar(key,value)" creates displayable variable.
  "newVar(key,value)" creates non-displayable variable (as earlier)
  Warning: "Variable.setTextDescriptor(td)" now changes "isDisplay" and "getCode".

IMP: (05/24/05, GVG) Extra M5M8 contact in TSMC90 for CMP foundry
